Add footnote, title in blog page

--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,10 @@ layout: default
 ---
 <div>
     <b>
-	<font size="+2">Research notes and ramblings. Posts generally are research notes titled with
-	a date, but sometimes contain multiple days of notes.</font>
+	<font size="+2">
+	    Research notes and ramblings. Mostly notes on research,
+	      not as much rambling <sup><a href="#note1">[1]</a> </sup>.
+	</font>
     </b>
 </div>
 <div class="posts">
@@ -20,3 +22,6 @@ layout: default
   {% if forloop.last %}</ul>{% endif %}
 {% endfor %}
 </div>
+<font size="-1">
+<p id="note1"><sup>1</sup> There's probably no difference between the two.</p>
+</font>
