--- a/group.html
+++ b/group.html
@@ -34,6 +34,7 @@
 </p>
 
 <h2>Fall 2021</h2>
+<h4>Co-organized with Doug Brinkerhoff</h4>
 9/8 <a href="https://arxiv.org/pdf/2103.03206"><b>Perceiver: General Perception
     with Iterative Attention</b></a>
 
@@ -80,7 +81,54 @@ Rest of semester: TBD
 </p>
 
 <h2>Spring 2021</h2>
-Fill out.
+
+<p>
+1/21 <a href="https://arxiv.org/abs/1706.03762"><b>Attention is All You Need</a></b>
+</p>
+
+<p>
+1/28 <a href="https://arxiv.org/abs/1810.04805"><b>BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding</a></b>
+</p>
+
+<p>
+2/4 <a href="https://arxiv.org/abs/2009.14794"><b>Rethinking Attention with Performers</a></b>
+</p>
+
+<p>
+2/11 <a href="https://arxiv.org/abs/1301.3781"><b>Efficient Estimation of Word Representations in Vector Space</a></b>
+</p>
+
+<p>
+2/18 <a href=""><b>An Image is worth 16x16 words</a></b>
+</p>
+
+<p>
+2/25 <a href=""><b>Alphafold 1</a></b>
+</p>
+
+<p>
+3/11 <a href=""><b>Dropout </a></b>
+</p>
+
+<p>
+3/18 <a href=""><b>Dropout as Bayesian approximation</a></b>
+</p>
+
+<p>
+4/1 <a href=""><b>Deep Ensembles: A loss landscape perspectiive</a></b>
+</p>
+
+<p>
+4/8 <a href=""><b>The convolutional Tsetlin machine</a></b> 4/15 <a href=""><b>Using Deep Learning to Annotate the protein universe</a></b>
+</p>
+
+<p>
+4/22 Neural <a href=""><b>Turing Machines</a></b>
+</p>
+
+<p>
+4/29 <b>Guest Speaker: Davi Bock, U Vermont: "Neural Networks from the Perspective of a Neuroscientist"</b>
+</p>
 
 
 <p>
