Add latest reading group paper

--- a/group.html
+++ b/group.html
@@ -76,6 +76,11 @@
 	 presented by Kristin Branson</a></b>
 </p>
 
+<p>
+11/3 <a href="https://arxiv.org/abs/2105.05233"><b>
+         Diffusion Models Beat GANs on Image Synthesis</a></b>
+</p>
+
 Rest of semester: TBD
 
 </p>
