Add better headshot and update my list of papers and add my github

--- a/index.html
+++ b/index.html
@@ -32,16 +32,20 @@
 
 
 <style type="text/css"></style></head><body><body>
-<img style="float:right" width="300" src="Files/headshot.png" hspace="30px">
+<img style="float:right" width="300" src="Files/headshot.jpeg" hspace="30px">
 <h1 style="margin-bottom:2mm">Thomas Colligan</h1>
 
 thomas DOT colligan AT umontana DOT edu
 
-<p style="margin-top:1.5cm">
+<p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
 at the University of Montana. I focus on developing machine learning algorithms to
 solve problems in biology. I also run/co-run the University of Montana Machine
-Learning Reading Group.
+Learning Reading Group (paper list <a href="group.html">here</a>).
+
+</br>
+</br>
+<a href="https://github.com/colligant">github</a>
 
 </p>
 
@@ -49,6 +53,23 @@ Learning Reading Group.
 <b>A Deep Learning Approach to Mapping Irrigation: IrrMapper U-Net</b> <a href="https://arxiv.org/abs/2103.03278">[arXiv]<a>
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
+</br>
+<i>Under review.</i>
+</p>
+
+<b>Detection of stratospheric gravity waves induced by the total solar eclipse of July 2, 2019
+</b> <a href="https://www.nature.com/articles/s41598-020-75098-2">[link]<a>
+<p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
+Thomas Colligan, Jennifer Fowler, Jaxen Godfrey & Carl Spangrude
+</br>
+Nature Scientific Reports, 2020
+</p>
+
+<b>Measuring ARTSE2017: Results from Wyoming and New York</b><a href="https://journals.ametsoc.org/view/journals/bams/100/6/bams-d-17-0331.1.xml"> [link]<a>
+<p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
+Jennifer Fowler, Junhong Wang, Deborah Ross, Thomas Colligan, and Jaxen Godfrey
+</br>
+Bulletin of the American Meteorological Society, 2019
 </p>
 
 </p>
@@ -60,8 +81,13 @@ Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
 Teaching Assistant
 </p>
 
-<h2><a href="group.html">ML Reading Group Papers</a></h2>
 
+<p>
+<h2><b>Education</b></h2>
+</p>
+MS, Computer Science, December 2020, University of Montana
+</br>
+BA, Physics, May 2018, University of Montana
 
 
 <p><small>Theme inspired by <a href="https://siqi-l.github.io/">Siqi
