--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@ Learning Reading Group (paper list <a href="group.html">here</a>).
 </br>
 </br>
 <a href="https://github.com/colligant">github</a>
+<a href="https://twitter.com/t_colligan">twitter</a> 
+<a href="https://stackoverflow.com/users/8195695/tom-c">stackoverflow</a> 
 
 </p>
 
-<h2>Papers</h2>
+<h2>Publications</h2>
 <b>A Deep Learning Approach to Mapping Irrigation: IrrMapper U-Net</b> <a href="https://arxiv.org/abs/2103.03278">[arXiv]<a>
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
