mac is case-insenstiive.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 <style type="text/css"></style></head><body><body>
-<img style="float:right" width="300" src="files/headshot.jpeg" alt="thomas colligan" hspace="30px">
+<img style="float:right" width="300" src="images/headshot.jpeg" alt="thomas colligan" hspace="30px">
 <h1 style="margin-bottom:2mm">Thomas Colligan</h1>
 
 thomas DOT colligan AT umontana DOT edu
