--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <HTML>
 
-<HEAD>
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+</head>
 <TITLE>Thomas Colligan</TITLE>
 
 <style type="text/css">
@@ -90,7 +92,6 @@ Teaching Assistant
 MS, Computer Science, December 2020, University of Montana
 </br>
 BA, Physics, May 2018, University of Montana
-
 
 <p><small>Theme inspired by <a href="https://siqi-l.github.io/">Siqi
 	Liu's</a> personal page.</small></p>
