Add working map and an image of a sheep.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 thomas DOT colligan AT umontana DOT edu
 
 <p>
+Add something to my <a href="map.html">map</a>.
+
+<p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
 at the University of Montana. I focus on developing machine learning algorithms to
 solve problems in biology. I also run/co-run the University of Montana Machine
@@ -95,6 +98,8 @@ BA, Physics, May 2018, University of Montana
 
 <p><small>Theme inspired by <a href="https://siqi-l.github.io/">Siqi
 	Liu's</a> personal page.</small></p>
+
+<p><a href="map.html">Map</a></p>
 
 </BODY>
 </HTML>
