Update reading group page and add some new entries to the map

--- a/group.html
+++ b/group.html
@@ -1,6 +1,9 @@
 <HTML>
 
 <HEAD>
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+</head>
 <TITLE>umt ml</TITLE>
 
 <style type="text/css">
@@ -81,7 +84,30 @@
          Diffusion Models Beat GANs on Image Synthesis</a></b>
 </p>
 
-Rest of semester: TBD
+<p>
+11/10 <a href="https://aclanthology.org/N19-1419/"><b>BERT Structural Probing</a></b>
+</p>
+
+<p>
+11/17 <a href="https://arxiv.org/abs/1603.06560.pdf"><b>Hyperband</a></b>
+</p>
+
+<p>
+11/24 <a href=""><b>No meeting (travel day for UMT students).</a></b>
+</p>
+
+<p>
+12/1 <a href="https://arxiv.org/abs/1405.4053"><b>Distributed Representations of
+Sentences and Documents</a></b>
+</p>
+
+<p>
+12/8 <a href="https://arxiv.org/abs/2106.04399"><b>
+Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation
+</a></b>
+</p>
+
+
 
 </p>
 
