--- a/map.html
+++ b/map.html
@@ -83,7 +83,9 @@ var popup7 = marker7.bindPopup("middle of country")
 var marker8 = L.marker([37.57443916, -83.05664063]).addTo(map);		
 var popup8 = marker8.bindPopup("awldne ")		
 var marker9 = L.marker([46.13456717, -114.3347168]).addTo(map);		
-var popup9 = marker9.bindPopup("ASSWIPES")
+var popup9 = marker9.bindPopup("ASSWIPES")		
+var marker10 = L.marker([40.8452113, 14.30353684]).addTo(map);		
+var popup10 = marker10.bindPopup("Naples!")
 
 	function onMapClick(e) {
 	    document.getElementById('lat-lng').value = 'you\'ve selected ' + e.latlng.lat + ", " + e.latlng.lng;
