--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ at the University of Montana. I focus on developing machine learning algorithms 
 solve problems in biology. I also run/co-run the University of Montana Machine
 Learning Reading Group (paper list <a href="group.html">here</a>).
 
+
+</br>
+</br>
+<a href="calendar.html">Schedule a meeting with me.</a>
+
+
+
 </br>
 </br>
 <a href="https://github.com/colligant">github</a>
