--- a/map_template.html
+++ b/map_template.html
@@ -88,13 +88,14 @@
 	    var popLocation= e.latlng;
 	    popup.setContent(content)
 	    popup.setLatLng(popLocation);
-	    popup.openOn(map);        
+	    popup.openOn(map);    
 
 	    const scriptURL = 'https://script.google.com/macros/s/AKfycbyGBKwHWuznqh8qa3sQwQOugspaGsxdehKE-FXu_ICCrn8clJ1olAZ9KOTAFpwsCYl8AA/exec'
 	    const form = document.forms['submit-to-google-sheet']
 
 	    form.addEventListener('submit', e => {
 		e.preventDefault();
+		var marker = L.marker([lat, lon]).addTo(map);
 		fetch(scriptURL, { method: 'POST', body: new FormData(form)})
 		  .then(response => alert('entry submitted successfully :)'))
 		  .catch(error => alert('uh oh.. something went wrong. Let tommy know.'))
