--- a/calendar.html
+++ b/calendar.html
@@ -1,20 +1,22 @@
 <html>
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+</head>
 <body>
 
-All times are in mountain.
-
-<br>
-<!--Schedule a meeting with me: <a href="http://wheelerlab.org/schedule">schedule</a> -->
-<!-- Calendly link widget begin -->
+<h1 style="margin-bottom:2mm">All times are in Mountain.</h1>
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/tcolligan0');return false;">Schedule time with me</a>
-<!-- Calendly link widget end -->
+<h1><a href="" onclick="Calendly.showPopupWidget('https://calendly.com/tcolligan0');return false;">Click here to schedule.</a><h1>
 
-<br>
-<br>
 <iframe src="https://calendar.google.com/calendar/embed?src=tcolligan0%40gmail.com&ctz=America%2FDenver" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 </body>
+
+<p>
+
+<h3><a href="index.html">Back to home.</a></h3>
+</p>
+
 </html>
 
