--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <h1><a href="" onclick="Calendly.showPopupWidget('https://calendly.com/tcolligan0');return false;">Click here to schedule.</a><h1>
 
-<iframe src="https://calendar.google.com/calendar/embed?src=tcolligan0%40gmail.com&ctz=America%2FDenver" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&showTabs=0&showPrint=0&showCalendars=0&title=%20&showTitle=0&src=dGNvbGxpZ2FuMEBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 </body>
 
