--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ thomas DOT colligan AT umontana DOT edu
 <p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
 at the University of Montana. I focus on developing machine learning algorithms to
-solve problems in biology. I also run/co-run the University of Montana Machine
-Learning Reading Group (paper list <a href="group.html">here</a>).
+solve problems in biology. 
+I'm also a part of the UM Machine Learning Reading Group (paper list <a href="group.html">here</a>).
 
 
 </br>
