--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I'm also a part of the UM Machine Learning Reading Group (paper list <a href="gr
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
 </br>
-<i>Under review.</i>
+<i>Accepted.</i>
 </p>
 
 <b>Detection of stratospheric gravity waves induced by the total solar eclipse of July 2, 2019
