--- a/calendar.html
+++ b/calendar.html
@@ -8,8 +8,7 @@
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <h1><a href="" onclick="Calendly.showPopupWidget('https://calendly.com/tcolligan0');return false;">Click here to schedule.</a><h1>
-
-<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&showTabs=0&showPrint=0&showCalendars=0&title=%20&showTitle=0&src=dGNvbGxpZ2FuMEBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&showTabs=1&showCalendars=1&mode=WEEK&src=dGNvbGxpZ2FuMEBnbWFpbC5jb20&src=NWpscDBwdTVnOW4wajZkNmdxcWZyMGtrMzhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=bnF1YXBwZTFAZ21haWwuY29t&color=%23039BE5&color=%238E24AA&color=%23009688" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 </body>
 
