Update readme + publications

--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1 style="margin-bottom:2mm">All times are in Mountain.</h1>
+    <h1 style="margin-bottom:2mm">All times are in Mountain (+DST).</a><h1>
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <h1><a href="" onclick="Calendly.showPopupWidget('https://calendly.com/tcolligan0');return false;">Click here to schedule.</a><h1>
