--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@ thomas DOT colligan AT umontana DOT edu
 <p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
 at the University of Montana. I focus on developing machine learning algorithms to
-solve problems in biology. 
-I'm also a part of the UM Machine Learning Reading Group (paper list <a href="group.html">here</a>).
+solve problems in biology. In my free time, I think about <a href
+    https://github.com/TravisWheelerLab/shopty>minimal hyperparameter tuning
+    frameworks</a> and how to optimize machine learning workflows for
+reproduciblity.
+I've also led/co-led the University of Montana Machine Learning Reading group (paper list <a href="group.html">here</a>).
 
 
 </br>
@@ -61,11 +64,12 @@ I'm also a part of the UM Machine Learning Reading Group (paper list <a href="gr
 </p>
 
 <h2>Publications</h2>
-<b>A Deep Learning Approach to Mapping Irrigation: IrrMapper U-Net</b> <a href="https://arxiv.org/abs/2103.03278">[arXiv]<a>
+<b>A Deep Learning Approach to Mapping Irrigation Using Landsat: IrrMapper
+    U-Net</b> <a href="https://ieeexplore.ieee.org/document/9775700">[link]<a>
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
 </br>
-<i>Accepted.</i>
+IEEE Transactions on Geosciences and Remote Sensing, 2022</i>
 </p>
 
 <b>Detection of stratospheric gravity waves induced by the total solar eclipse of July 2, 2019
