Add quotes around link

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ thomas DOT colligan AT umontana DOT edu
 <p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
 at the University of Montana. I focus on developing machine learning algorithms to
-solve problems in biology. In my free time, I think about <a href
-    https://github.com/TravisWheelerLab/shopty>minimal hyperparameter tuning
+solve problems in biology. In my free time, I think about <a
+href="https://github.com/TravisWheelerLab/shopty">minimal hyperparameter tuning
     frameworks</a> and how to optimize machine learning workflows for
 reproduciblity.
 I've also led/co-led the University of Montana Machine Learning Reading group (paper list <a href="group.html">here</a>).
