--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <img style="float:right" width="300" src="images/headshot.jpeg" alt="thomas colligan" hspace="30px">
 <h1 style="margin-bottom:2mm">Thomas Colligan</h1>
 
-thomas DOT colligan AT umontana DOT edu
+colligan AT arizona DOT edu
 
 <p>
 I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
-at the University of Montana. I focus on developing machine learning algorithms to
+at the University of Arizona. I focus on developing machine learning algorithms to
 solve problems in biology. In my free time, I think about <a
 href="https://github.com/TravisWheelerLab/shopty">minimal hyperparameter tuning
     frameworks</a> and how to optimize machine learning workflows for
