--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 <img style="float:right" width="300" src="images/headshot.jpeg" alt="thomas colligan" hspace="30px">
 <h1 style="margin-bottom:2mm">Thomas Colligan</h1>
 
-colligan AT arizona DOT edu
+thomas DOT colligan AT outlook DOT com
 
 <p>
-I am a software engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
-at the University of Arizona. I focus on developing machine learning algorithms to
-solve problems in biology. In my free time, I think about <a
+<i>I am currently looking for work as an ML Engineer/Data Scientist!</i>
+<p>
+Until recently, I was an ML Engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
+at the University of Arizona <sup><a href="#footnote-1">[1]</a></sup>. My focus there was on developing machine learning algorithms to
+solve problems in biology. I also advised students, which was very rewarding. In my free time, I think about <a
 href="https://github.com/TravisWheelerLab/shopty">minimal hyperparameter tuning
-    frameworks</a> and how to optimize machine learning workflows for
-reproduciblity.
+frameworks</a> and how to <a href="https://github.com/colligant/dl_template">optimize machine learning workflows for reproducibility.</a>
+
 I've also led/co-led the University of Montana Machine Learning Reading group (paper list <a href="group.html">here</a>).
 
 
@@ -62,14 +64,33 @@ I've also led/co-led the University of Montana Machine Learning Reading group (p
 <a href="https://stackoverflow.com/users/8195695/tom-c">stackoverflow</a> 
 
 </p>
+<small>
+<p id="footnote-1">[1] Don't worry, I left amicably! It was time to move on.</p>
+</small>
 
 <h2>Publications</h2>
+<b>DISCO: A deep learning ensemble for uncertainty-aware
+segmentation of acoustic signals</b> <a href="https://www.biorxiv.org/content/10.1101/2023.01.24.525459v2.full.pdf">[link]<a>
+<p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
+Thomas Colligan, Kayla Irish, Douglas J Emlen, and Travis J Wheeler.
+</br>
+<i>Under review.</i>
+</p>
+
+
 <b>A Deep Learning Approach to Mapping Irrigation Using Landsat: IrrMapper
     U-Net</b> <a href="https://ieeexplore.ieee.org/document/9775700">[link]<a>
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, David Ketchum, Douglas Brinkerhoff, and Marco Maneta.
 </br>
 IEEE Transactions on Geosciences and Remote Sensing, 2022</i>
+</p>
+
+<b>Drugsniffer: An Open Source Workflow for Virtually Screening Billions of Molecules for Binding Affinity to Protein Targets <a href="https://www.frontiersin.org/articles/10.3389/fphar.2022.874746/full">[link]<a>
+<p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
+Venkatraman et al.
+</br>
+Frontiers in Pharmacology, 2022</i>
 </p>
 
 <b>Detection of stratospheric gravity waves induced by the total solar eclipse of July 2, 2019
