--- a/index.html
+++ b/index.html
@@ -40,21 +40,18 @@
 thomas DOT colligan AT outlook DOT com
 
 <p>
-<i>I am currently looking for work as an ML Engineer/Data Scientist!</i>
-<p>
-Until recently, I was an ML Engineer in the <a href="http://wheelerlab.org">Wheeler Lab</a>
-at the University of Arizona <sup><a href="#footnote-1">[1]</a></sup>. My focus there was on developing machine learning algorithms to
-solve problems in biology. I also advised students, which was very rewarding. In my free time, I think about <a
-href="https://github.com/TravisWheelerLab/shopty">minimal hyperparameter tuning
-frameworks</a> and how to <a href="https://github.com/colligant/dl_template">optimize machine learning workflows for reproducibility.</a>
+
+I am currently a software engineer at <a href="https://essic.umd.edu/joom2/">UMD
+    ESSIC</a>, working on making climate models more accessible.
+Before that, I was an ML Engineer/Data Scientist/student mentor in the <a href="http://wheelerlab.org">Wheeler Lab</a>
+at the University of Arizona. My focus there was on developing machine learning algorithms to
+solve problems in biology. I also advised students, which was very rewarding. 
 
 I've also led/co-led the University of Montana Machine Learning Reading group (paper list <a href="group.html">here</a>).
-
 
 </br>
 </br>
 <a href="calendar.html">Schedule a meeting with me.</a>
-
 
 
 </br>
@@ -63,18 +60,13 @@ I've also led/co-led the University of Montana Machine Learning Reading group (p
 <a href="https://twitter.com/t_colligan">twitter</a> 
 <a href="https://stackoverflow.com/users/8195695/tom-c">stackoverflow</a> 
 
-</p>
-<small>
-<p id="footnote-1">[1] Don't worry, I left amicably! It was time to move on.</p>
-</small>
-
 <h2>Publications</h2>
 <b>DISCO: A deep learning ensemble for uncertainty-aware
 segmentation of acoustic signals</b> <a href="https://www.biorxiv.org/content/10.1101/2023.01.24.525459v2.full.pdf">[link]<a>
 <p style="margin-bottom:1cm; margin-left:0cm; margin-top:1mm">
 Thomas Colligan, Kayla Irish, Douglas J Emlen, and Travis J Wheeler.
 </br>
-<i>Under review.</i>
+<i>PLOS ONE, 2023</i>
 </p>
 
 
