Add updated email

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <img style="float:right" width="300" src="images/headshot.jpeg" alt="thomas colligan" hspace="30px">
 <h1 style="margin-bottom:2mm">Thomas Colligan</h1>
 
-thomas DOT colligan AT outlook DOT com
+colligan AT umd DOT edu
 
 <p>
 
